# beatsaber-linux-goodies

./: .gitmodules  Dockerfile  Jenkinsfile  Jenkinsfile.Beataroni  LICENSE  README.md
.circleci/: config.yml
BeatDrop/: README.md
Beataroni/: .gitignore  App.xaml  Beataroni.csproj  Beataroni.sln  Program.cs  README.md
Beataroni/Beataroni/: App.xaml  App.xaml.cs  Beataroni.csproj  Program.cs  ViewLocator.cs
Beataroni/Beataroni.Tests/: BeatModsV1Tests.cs  Beataroni.Tests.csproj
Beataroni/Beataroni/Helpers/: StringSortComparer.cs
Beataroni/Beataroni/Models/: mod.cs
Beataroni/Beataroni/Models/BeatMods/: mod.cs
Beataroni/Beataroni/Properties/PublishProfiles/: Linux64.pubxml  Win64.pubxml
Beataroni/Beataroni/Services/: BeatModsV1.cs  modinstaller.cs  settings.cs
Beataroni/Beataroni/ViewModels/: MainWindowViewModel.cs  ModInstallViewModel.cs  ModsViewModel.cs  SettingsViewModel.cs  ViewModelBase.cs
Beataroni/Beataroni/Views/: MainWindow.xaml  MainWindow.xaml.cs  ModInstallView.xaml  ModInstallView.xaml.cs  ModsView.xaml  ModsView.xaml.cs  SettingsView.xaml  SettingsView.xaml.cs
IPA/: README.md
IPA/bin-minimal-linux64/: IPA-Minimal-Licence.txt
ModAssistant/: README.md
QBeat/: BUILD.md  CMakeLists.txt  HomeForm.ui.qml  LICENSE  ModsPageForm.ui.qml  QBeat.pro  README.md  SettingsPageForm.qml  actions.cpp  actions.h  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf  settings.cpp  settings.h  util.cpp  util.h
QBeat/apis/: beatmodsv1.cpp  beatmodsv1.h
QBeat/json/: download.cpp  download.h  mod.cpp  mod.h
QBeat/mods/: mod.h
scripts/: README.md  bs-linux-is-wine-valid.sh  bs-linux-modfix.sh  bs-linux-setup-wine.sh
scripts/workarounds/: proc-stopper.sh  wine-49532-workaround.sh  wine-49897-workaround.sh
tui-script/: QBeat-tui  README.md
